Performance Enhancements:
Removed Unnecessary cast, as not all Java compilers optimize unnecessary casts away, which results in additional costs at run time.

Improved logging, Exception Handling.


SVN-Revision: 137